書籍カテゴリをCコードに変更
